# neural-network

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
benchmarks/: CMakeLists.txt
cmake/: CompileOptions.cmake  Helpers.cmake  ProjectSettings.cmake
src/: activation-func.cpp  activation-func.h  layer.cpp  layer.h  loss-func.cpp  loss-func.h  net.cpp  net.h  optimizer.cpp  optimizer.h  program.cpp  program.h  random.cpp  random.h
tests/: CMakeLists.txt  except.cpp  notebook.ipynb  simple.cpp  test-nnet.cpp  test-nnet.h  test_googletest.cpp  test_mnist.cpp  test_test.cpp  usings.h
